--- a/log_ui.ui
+++ b/log_ui.ui
@@ -66,7 +66,10 @@ border-radius:2px
         <item>
          <widget class="QCheckBox" name="Maxmi">
           <property name="text">
-           <string>区分大小写</string>
+           <string>忽略大小写</string>
+          </property>
+          <property name="checked">
+           <bool>true</bool>
           </property>
          </widget>
         </item>
